pequeñas mejoras en la optimizacion

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     
     <header class="header">
         <div class="logo">
-            <img src="img/logo-edlp.webp" alt="Logo del club.">
+            <img src="img/logo-edlp.webp" alt="Logo del club." width="50px">
         </div>
         <nav class="navbar">
             <ul class="nav-links">
@@ -32,7 +32,7 @@
     <main>
         <section id="section-1">
             <div class="s1-div">
-                <img class="s1-img" src="img/ruge.webp" alt="Logo de Ruge.">
+                <img class="s1-img" src="img/ruge.webp" alt="Logo de Ruge." width="200px">
                 <h1 class="s1-titulo">PRESENTACION<br> INDUMENTARIA 2023</h1>
                 <a href="pages/tienda.html"><button class="s1-boton">Saber más</button></a>
             </div>
