--- a/pages/elclub.html
+++ b/pages/elclub.html
@@ -15,7 +15,7 @@
     
     <header class="header">
         <div class="logo">
-            <img src="../img/logo-edlp.webp" alt="Logo del club.">
+            <img src="../img/logo-edlp.webp" alt="Logo del club." width="50px">
         </div>
         <nav class="navbar">
             <ul class="nav-links">
