--- a/pages/plantilla.html
+++ b/pages/plantilla.html
@@ -15,7 +15,7 @@
 
     <header class="header">
         <div class="logo">
-            <img src="../img/logo-edlp.webp" alt="Logo del club.">
+            <img src="../img/logo-edlp.webp" alt="Logo del club." width="50px">
         </div>
         <nav class="navbar">
             <ul class="nav-links">
@@ -30,7 +30,7 @@
 
     <main>
         <section id="plantilla-section-1">
-            <img class="imagen-equipo" src="https://assets.goal.com/v3/assets/bltcc7a7ffd2fbf71f5/bltcf727e48efbf6bec/62086d21bf84cc07991678bf/01estudiante.png" alt="Equipo actual temporada 22/23">
+            <img class="imagen-equipo" src="../img/equipo-edlp.webp" alt="Equipo actual temporada 22/23" width="100%" height="500px">
             <h1 class="plantilla-s1-titulo">FUTBOL PROFESIONAL</h1>
         </section>
 
@@ -39,7 +39,7 @@
 
             <div class="seccion-jugadores">
                 <div class="card-jugador">
-                    <img src="../img/mariano-andujar.webp" alt="Mariano Andujar">
+                    <img src="../img/mariano-andujar.webp" alt="Mariano Andujar" height="260px" width="100%">
                     <div class="descripcion">
                         <span>#1</span>
                         <p>Mariano <br>Andujar</p>
@@ -48,7 +48,7 @@
                 </div>
 
                 <div class="card-jugador">
-                    <img src="../img/zaid-romero.webp" alt="Zaid Romero">
+                    <img src="../img/zaid-romero.webp" alt="Zaid Romero" height="260px" width="100%">
                     <div class="descripcion">
                         <span>#2</span>
                         <p>Zaid <br>Romero</p>
@@ -57,7 +57,7 @@
                 </div>
 
                 <div class="card-jugador">
-                    <img src="../img/gaston-benedetti.webp" alt="Gastón Benedetti">
+                    <img src="../img/gaston-benedetti.webp" alt="Gastón Benedetti" height="260px" width="100%">
                     <div class="descripcion">
                         <span>#13</span>
                         <p>Gastón <br>Benedetti</p>
@@ -66,7 +66,7 @@
                 </div>
 
                 <div class="card-jugador">
-                    <img src="../img/luciano-lollo.webp" alt="Luciano Lollo">
+                    <img src="../img/luciano-lollo.webp" alt="Luciano Lollo" height="260px" width="100%">
                     <div class="descripcion">
                         <span>#26</span>
                         <p>Luciano <br>Lollo</p>
@@ -75,7 +75,7 @@
                 </div>
 
                 <div class="card-jugador">
-                    <img src="../img/santiago-nuñez.webp" alt="Santiago Nuñez">
+                    <img src="../img/santiago-nuñez.webp" alt="Santiago Nuñez" height="260px" width="100%">
                     <div class="descripcion">
                         <span>#4</span>
                         <p>Santiago <br>Nuñez</p>
@@ -84,7 +84,7 @@
                 </div>
 
                 <div class="card-jugador">
-                    <img src="../img/eros-mancuso.webp" alt="Eros Mancuso">
+                    <img src="../img/eros-mancuso.webp" alt="Eros Mancuso" height="260px" width="100%">
                     <div class="descripcion">
                         <span>#14</span>
                         <p>Eros <br>Mancuso</p>
@@ -93,7 +93,7 @@
                 </div>
 
                 <div class="card-jugador">
-                    <img src="../img/santiago-ascacibar.webp" alt="Santiago Ascacibar">
+                    <img src="../img/santiago-ascacibar.webp" alt="Santiago Ascacibar" height="260px" width="100%">
                     <div class="descripcion">
                         <span>#5</span>
                         <p>Santiago <br>Ascacibar</p>
@@ -102,7 +102,7 @@
                 </div>
 
                 <div class="card-jugador">
-                    <img src="../img/jorge-rodriguez.webp" alt="Jorge Rodriguez">
+                    <img src="../img/jorge-rodriguez.webp" alt="Jorge Rodriguez" height="260px" width="100%">
                     <div class="descripcion">
                         <span>#30</span>
                         <p>Jorge <br>Rodriguez</p>
@@ -111,7 +111,7 @@
                 </div>
 
                 <div class="card-jugador">
-                    <img src="../img/benjamin-rollheiser.webp" alt="Benjamin Rollheiser">
+                    <img src="../img/benjamin-rollheiser.webp" alt="Benjamin Rollheiser" height="260px" width="100%">
                     <div class="descripcion">
                         <span>#10</span>
                         <p>Benjamin <br>Rollheiser</p>
@@ -120,7 +120,7 @@
                 </div>
 
                 <div class="card-jugador">
-                    <img src="../img/jose-sosa.webp" alt="Jose Sosa">
+                    <img src="../img/jose-sosa.webp" alt="Jose Sosa" height="260px" width="100%">
                     <div class="descripcion">
                         <span>#7</span>
                         <p>José <br>Sosa</p>
@@ -129,7 +129,7 @@
                 </div>
 
                 <div class="card-jugador">
-                    <img src="../img/fernando-zuqui.webp" alt="Fernando Zuqui">
+                    <img src="../img/fernando-zuqui.webp" alt="Fernando Zuqui" height="260px" width="100%">
                     <div class="descripcion">
                         <span>#8</span>
                         <p>Fernando <br>Zuqui</p>
@@ -138,7 +138,7 @@
                 </div>
 
                 <div class="card-jugador">
-                    <img src="../img/mauro-boselli.webp" alt="Mauro Boselli">
+                    <img src="../img/mauro-boselli.webp" alt="Mauro Boselli" height="260px" width="100%">
                     <div class="descripcion">
                         <span>#17</span>
                         <p>Mauro <br>Boselli</p>
@@ -147,7 +147,7 @@
                 </div>
 
                 <div class="card-jugador">
-                    <img src="../img/guido-carrillo.webp" alt="Guido Carrillo">
+                    <img src="../img/guido-carrillo.webp" alt="Guido Carrillo" height="260px" width="100%">
                     <div class="descripcion">
                         <span>#17</span>
                         <p>Guido <br>Carrillo</p>
@@ -156,7 +156,7 @@
                 </div>
 
                 <div class="card-jugador">
-                    <img src="../img/mauro-mendez.webp" alt="Mauro Mendez">
+                    <img src="../img/mauro-mendez.webp" alt="Mauro Mendez" height="260px" width="100%">
                     <div class="descripcion">
                         <span>#16</span>
                         <p>Mauro <br>Mendez</p>
@@ -165,7 +165,7 @@
                 </div>
 
                 <div class="card-jugador">
-                    <img src="../img/pablo-piatti.webp" alt="Pablo Piatti">
+                    <img src="../img/pablo-piatti.webp" alt="Pablo Piatti" height="260px" width="100%">
                     <div class="descripcion">
                         <span>#31</span>
                         <p>Pablo <br>Piatti</p>
