--- a/pages/socio.html
+++ b/pages/socio.html
@@ -14,7 +14,7 @@
 <body>
     <header class="header">
         <div class="logo">
-            <img src="../img/logo-edlp.webp" alt="Logo de Ruge.">
+            <img src="../img/logo-edlp.webp" alt="Logo de Ruge." width="50px">
         </div>
         <nav class="navbar">
             <ul class="nav-links">
