--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -14,7 +14,7 @@
 <body>
     <header class="header">
         <div class="logo">
-            <img src="../img/ruge.webp" alt="Logo de Ruge.">
+            <img src="../img/ruge.webp" alt="Logo de Ruge." width="70px">
         </div>
         <nav class="navbar">
             <ul class="nav-links">
