--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             
             <div class="partidos">
                 <div class="partido">
-                    <h4>Fecha 6</h4>
+                    <p>Fecha 6</p>
                     <div partido-img>
                         <img src="img/logo-newells.webp" alt="edlp" width="75px">
                         <span>VS</span>
@@ -60,7 +60,7 @@
                 </div>
 
                 <div class="partido partido-actual">
-                    <h4>Fecha 7</h4>
+                    <p>Fecha 7</p>
                     <div partido-img>
                         <img src="img/logo-edlp.webp" alt="edlp" width="60px">
                         <span>VS</span>
@@ -74,7 +74,7 @@
 
                 </div>
                 <div class="partido">
-                    <h4>Fecha 8</h4>
+                    <p>Fecha 8</p>
                     <div partido-img>
                         <img src="img/logo-edlp.webp" alt="edlp" width="60px">
                         <span>VS</span>
