--- a/pages/plantilla.html
+++ b/pages/plantilla.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Plantilla | Estudiantes de La Plata</title>
-    
+    <meta name="description" content="Plantilla temporada 23/24 Estudiantes de La Plata">
+
     <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
     <link rel="icon" href="../img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../css/normalize.css" type="text/css">
