--- a/pages/elclub.html
+++ b/pages/elclub.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>El club | Estudiantes de La Plata</title>
+    <meta name="description" content="Informacion oficial del club Estudiantes de La Plata">
 
     <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
     <link rel="icon" href="../img/favicon.ico" type="image/x-icon">
@@ -63,7 +64,7 @@
             </div>
         </section>
 
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3271.785309476467!2d-57.94154682475453!3d-34.911836873834986!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a2e61621b73869%3A0x32c529fe42daaa5d!2sEstadio%20UNO%20Jorge%20Luis%20Hirschi!5e0!3m2!1ses!2sar!4v1698218275507!5m2!1ses!2sar" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3271.785309476467!2d-57.94154682475453!3d-34.911836873834986!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a2e61621b73869%3A0x32c529fe42daaa5d!2sEstadio%20UNO%20Jorge%20Luis%20Hirschi!5e0!3m2!1ses!2sar!4v1698218275507!5m2!1ses!2sar" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="Mapa del estadio Uno"></iframe>
 
         <section id="elclub-section-5">
             <div class="form-info">
