--- a/pages/socio.html
+++ b/pages/socio.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hacete socio | Estudiantes de La Plata</title>
+    <meta name="description" content="Pagina oficial de socio de Estudiantes de La Plata">
 
     <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
     <link rel="icon" href="../img/favicon.ico" type="image/x-icon">
