agregue carrousel en index y validar formulario

--- a/index.html
+++ b/index.html
@@ -135,9 +135,13 @@
         </section>
 
         <section id="section-4">
+            <button class="btnIzquierdo"><</button>
             <div class="sponsor-imagenes">
-                <img src="" alt="">
+                <img src="img/sponsor1.webp" alt="Sponsor oficial" width="200px" height="150px" class="img1">
+                <img src="img/sponsor2.webp" alt="Sponsor oficial" width="200px" height="150px" class="img2">
+                <img src="img/sponsor3.webp" alt="Sponsor oficial" width="200px" height="150px" class="img3">
             </div>
+            <button class="btnDerecho">></button>
         </section>
     </main>
 
@@ -159,5 +163,7 @@
             
         </div>
     </footer>
+
+    <script src="scripts/carrousel-sponsors.js"></script>
 </body>
 </html>
