--- a/pages/elclub.html
+++ b/pages/elclub.html
@@ -6,8 +6,8 @@
     <title>El club | Estudiantes de La Plata</title>
     <meta name="description" content="Informacion oficial del club Estudiantes de La Plata">
 
-    <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="../img/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../img/favicon.png" type="image/x-icon">
+    <link rel="icon" href="../img/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/normalize.css" type="text/css">
     <link rel="stylesheet" href="../css/elclub.css" type="text/css">
     <link rel="stylesheet" href="../css/responsive.css" type="text/css">
