--- a/pages/plantilla.html
+++ b/pages/plantilla.html
@@ -6,8 +6,8 @@
     <title>Plantilla | Estudiantes de La Plata</title>
     <meta name="description" content="Plantilla temporada 23/24 Estudiantes de La Plata">
 
-    <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="../img/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../img/favicon.png" type="image/x-icon">
+    <link rel="icon" href="../img/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/normalize.css" type="text/css">
     <link rel="stylesheet" href="../css/plantilla.css" type="text/css">
     <link rel="stylesheet" href="../css/responsive.css" type="text/css">
