--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -6,8 +6,8 @@
         <title>Tienda | Estudiantes de La Plata</title>
         <meta name="description" content="Tienda oficial Ruge de Estudiantes de La Plata">
     
-        <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
-        <link rel="icon" href="../img/favicon.ico" type="image/x-icon">
+        <link rel="shortcut icon" href="../img/favicon.png" type="image/x-icon">
+        <link rel="icon" href="../img/favicon.png" type="image/x-icon">
         <link rel="stylesheet" href="../css/normalize.css" type="text/css">
         <link rel="stylesheet" href="../css/tienda.css" type="text/css">
         <link rel="stylesheet" href="../css/responsive.css" type="text/css">
